--- a/Html/Css/mainPageStyles.css
+++ b/Html/Css/mainPageStyles.css
@@ -13,6 +13,15 @@ body {
     color: var(--text-color);
 }
 
+h3{
+    margin: 0.3125em;
+
+}
+p{
+    margin: 0.3125em;
+}
+
+
 img {
     max-width: 100%;
     height: auto;
@@ -106,8 +115,8 @@ main {
 
 .slider {
     position: relative;
-    margin-bottom: 2rem;
-    padding:  1rem;
+    margin-bottom: 0.5rem;
+    padding:  0.5rem;
     background-color: #fff;
 }
 
@@ -120,12 +129,14 @@ main {
     overflow-x: auto;
     scroll-snap-type: x mandatory;
     -webkit-overflow-scrolling: touch;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 .slider article {
     flex: 0 0 600px;
-    margin-right: 1rem;
-    background-color: #fff;
+    margin-right: 0rem;
+    background-color: white;
     padding: 1rem;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.1);
@@ -137,12 +148,16 @@ main {
     transform: translateY(-5px);
 }
 
+.ArticleTag{
+    margin: 0.315em;
+}
+
 .slider article img {
     width: 100%;
     height: 400px; 
-    object-fit: cover; /* This ensures the image covers the area without stretching */
+    object-fit: cover; 
     border-radius: 5px;
-    margin-bottom: 1rem;
+    margin-bottom: 0rem;
 }
 
 .slider .prev,
@@ -153,7 +168,7 @@ main {
     background-color: rgba(0,0,0,0.5);
     color: white;
     border: none;
-    padding: 1rem;
+    padding: 0.5rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -191,6 +206,7 @@ footer {
     background-color: var(--secondary-color);
     color: white;
     padding: 1rem;
+    margin-top: 5rem;
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     gap: 1rem;
